package cn.thinkinjava.design.pattern.struct.flyweight.frame;

/**
 * 抽象享元角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public abstract class Flyweight {
    abstract public void operation(String state);
}
